--- a/includes/styles/styles.css
+++ b/includes/styles/styles.css
@@ -1,6 +1,11 @@
 body{
-    background: url('../images/bg_3.png');
-    background-size: cover;
+}
+.bg-img{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
 }
 nav li{
     font-size: 1.3em;
